--- a/templates/Home.html
+++ b/templates/Home.html
@@ -12,6 +12,7 @@
     <a href="/room" class="button">Room info</a>
     <a href="/events" class="button">Event planer</a>
     <a href="/monitoring" class="button">Monitoring</a>
+    <a href="/energyConsumption" class="button">Consumption</a>
     <a href="/login" class="button">Log In</a>
     <a href="/logout" class="button">Log Out</a>
 </body>
